css/mattphillips/header.css
.sidebar {
    width:250px;
    background-color:#F2F2F2;
    box-shadow: 2px 0px 0px #B4B3B3;
    padding-right:0px;
    height:100vh;
}

.header ul {
    padding-left:0;
}

.header li a {
    font-size:200%;
}

.header li:hover {
    background-color:  #A5EFEA;
}

.banner {
    background-color:#48CAC2;
    color:#fff;
    margin-top:25px;
}

.banner i {
    color:#fff;
}

.site-nav-vertical {
    margin-top:50px;
}

.site-nav-vertical ul {
    list-style-type: none;
}

.site-nav-vertical li {
    margin-top:10px;
    background-color:#48CAC2;
    padding-left:80px
}

.site-nav-vertical a {
    color:#fff;
    display:block;
}

.site-nav-horizontal {
    margin-left:5px
}

.site-nav-horizontal a {
    color:#fff;
    display:block;
}

